--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/Users/moose/Downloads/java-lib/httpcomponents-client-4.5.2/lib/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="/Users/moose/Downloads/java-lib/httpcomponents-client-4.5.2/lib/httpclient-4.5.2.jar"/>
 	<classpathentry kind="lib" path="/Users/moose/Downloads/java-lib/httpcomponents-client-4.5.2/lib/httpcore-4.4.4.jar"/>
@@ -9,5 +18,10 @@
 	<classpathentry kind="lib" path="/Users/moose/Downloads/java-lib/slf4j-1.7.22/slf4j-api-1.7.22.jar"/>
 	<classpathentry kind="lib" path="/Users/moose/Downloads/java-lib/slf4j-1.7.22/slf4j-simple-1.7.22.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
